[package]
authors = ["Anthony Lukach <anthonylukach@gmail.com>"]
edition = "2021"
name = "cf-postgres"
version = "0.1.0"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
console_error_panic_hook = {version = "0.1.1"}
http = "1.1"
tokio-postgres = {version = "0.7", features = ['js'], default-features = false}
worker = {version = "0.4.2", features = ['tokio-postgres']}
worker-macros = {version = "0.4.2", features = ['http']}
